--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "@strapi/plugin-graphql": "4.5.0",
-    "@strapi/plugin-i18n": "4.5.0",
-    "@strapi/plugin-users-permissions": "4.5.0",
-    "@strapi/strapi": "4.5.0",
-    "better-sqlite3": "7.4.6",
+    "@strapi/plugin-graphql": "^4.5.4",
+    "@strapi/plugin-i18n": "4.5.4",
+    "@strapi/plugin-users-permissions": "4.5.4",
+    "@strapi/strapi": "4.5.4",
+    "pg": "8.6.0",
     "strapi-plugin-import-export-entries": "^1.18.0"
   },
   "author": {
     "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "e2027c41-3acb-4c5c-9095-79d4a821eca9"
+    "uuid": "7a49be4a-52b2-4ecc-992b-eb70a5120959"
   },
   "engines": {
     "node": ">=14.19.1 <=18.x.x",
